--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+.App{
+  display: flex;
+  justify-content: center;
+ }
+ .receiptContainer{
+   margin-left: 20px;
+   border: 2px double red;
+   padding: 30px;
+   height: 400px;
+   width: 400px;
+ }
+ .spaceBelow{
+   margin-bottom: 50px;
+ }
+ .receiptsHeading{
+   height: 100px;
+   background-color: red;
+   color: white;
+   text-align: center;
+   margin-bottom: 10px;
+ }
